собрал всё в auth модуле для регистрации. еще нужно validation-code

--- a/.env.dev
+++ b/.env.dev
@@ -4,5 +4,8 @@ PORT=3000
 #DB Config
 MONGO_DB_URL="mongodb+srv://VanyaMate:KLOCHKOV123@cluster0.yuutfwv.mongodb.net/cur-helper?retryWrites=true&w=majority"
 
+#Hash
+HASH_SECRET_KEY=3
+
 #JWT Config
-JWT_SECRET_KEY="SecretKey0001"
+JWT_SECRET_KEY=SecretKey0001
