--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
         "class-validator": "^0.14.0",
         "cookie-parser": "^1.4.6",
         "cross-env": "^7.0.3",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.3",
         "reflect-metadata": "^0.1.13",
-        "rxjs": "^7.8.1"
+        "rxjs": "^7.8.1",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@nestjs/cli": "^10.0.0",
@@ -36,8 +38,10 @@
         "@types/cookie-parser": "^1.4.6",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
+        "@types/jsonwebtoken": "^9.0.5",
         "@types/node": "^20.3.1",
         "@types/supertest": "^6.0.0",
+        "@types/uuid": "^9.0.8",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "dotenv-cli": "^7.3.0",
