--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
         "@nestjs/mongoose": "^10.0.2",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/schedule": "^4.0.0",
-        "@vanyamate/cur-helper-types": "^0.0.37",
+        "@vanyamate/cur-helper-types": "^0.0.39",
         "bcrypt": "^5.1.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "cookie-parser": "^1.4.6",
         "cross-env": "^7.0.3",
+        "dom-parser": "^1.1.5",
+        "html-dom-parser": "^5.0.8",
+        "jsdom": "^24.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.3",
         "reflect-metadata": "^0.1.13",
@@ -37,8 +40,10 @@
         "@nestjs/testing": "^10.0.0",
         "@types/bcrypt": "^5.0.2",
         "@types/cookie-parser": "^1.4.6",
+        "@types/dom-parser": "^0.1.4",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
+        "@types/jsdom": "^21.1.7",
         "@types/jsonwebtoken": "^9.0.5",
         "@types/node": "^20.3.1",
         "@types/supertest": "^6.0.0",
